# yast-cd-creator

./: .cvsignore  README.md  yast2-cd-creator.spec.in
cd-creator/: RPMNAME  yast2-cd-creator.spec.in
cd-creator/package/: yast2-cd-creator.changes
cd-creator/scripts/: Makefile.am
cd-creator/src/: cd-creator.desktop  cd-creator.ycp  complex.ycp  routines.ycp
cd-creator/src/data/: isolinux.cfg
package/: yast2-CD-creator.changes  yast2-cd-creator.changes
scripts/: y2mkiso
src/: CD-creator.desktop  CD-creator.ycp  CD-creator_auto.ycp  CD-creator_proposal.ycp  CDCreator.ycp  InstSource.ycp  Makefile.am  cd-creator.desktop  cd-creator.ycp  complex.ycp  dialogs.ycp  helps.ycp  kiwi.ycp  routines.ycp  wizards.ycp
src/data/: Makefile.am  isolinux.cfg
